Link to repository added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
           <a href="https://github.com/Raynecloudss" target="_blank"
             >Avané Falls</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a
+            href="https://github.com/Raynecloudss/Week-6-HW-SheCodes"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
