--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             on GitHub</a
           >
           and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://courageous-panda-2b1d71.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
